# cocoa-way

./: .gitignore  AGENTS.md  AWESOME_SUBMISSIONS.md  Cargo.toml  README.md  build.rs  cocoa-way.rb  flake.nix  run_waypipe.sh
.cargo/: config.toml
.github/workflows/: release.yml
Formula/: cocoa-way.rb
src/: gl_renderer.rs  handlers.rs  keymap.rs  layout.rs  lib.rs  main.rs  messages.rs  render.rs  state.rs
test-client/: Cargo.toml
test-client/src/: main.rs
