[package]
name = "cocoa-way"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-only"
default-run = "cocoa-way"


[dependencies]
smithay = { path = "vendor/smithay", default-features = false, features = ["wayland_frontend"] }
winit = { version = "0.29", default-features = false, features = ["rwh_06"] }
glutin = "0.31"
glutin-winit = "0.4"
gl = "0.14"
raw-window-handle = "0.5"
softbuffer = "0.4"
log = "0.4"
env_logger = "0.10"
utils = { package = "calloop", version = "0.12" }
memmap2 = "0.9"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
image = "0.24" # For loading window icon

[dev-dependencies]
wayland-client = { version = "0.31", default-features = false }
tempfile = "3.8"

[build-dependencies]
pkg-config = "0.3"

[workspace]
members = [
    "test-client"
]
